--- a/tox.ini
+++ b/tox.ini
@@ -15,6 +15,6 @@ deps =
     flake8-import-order
     mypy
 commands =
-    black --target-version py35 --check systemlink_integration
-    flake8 systemlink_integration
-    mypy --config-file mypy.ini systemlink_integration
+    black --target-version py35 --check examples
+    flake8 examples
+    mypy --config-file mypy.ini examples
