--- a/mypy.ini
+++ b/mypy.ini
@@ -1,8 +1,8 @@
 [mypy]
-files=systemlink_integration
+files=examples
 warn_unused_configs=True
 
-[mypy-systemlink_integration.*]
+[mypy-examples.*]
 disallow_untyped_calls=True
 disallow_untyped_defs=True
 disallow_incomplete_defs=True
